<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:orientation="vertical">

    <TextView
        android:id="@+id/table_label1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/table_create" />

    <TextView
        android:id="@+id/table_label2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/table_how_many" />

    <EditText
        android:id="@+id/table_num_of_tables"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <Button
        android:id="@+id/btable_numOfTableConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next" />

    <TextView
        android:id="@+id/table_error_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ListView
        android:id="@+id/new_tables_listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/bNewTableSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/save" />

    <!--    <LinearLayout-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:orientation="vertical">-->

    <!--        -->
    <!--    </LinearLayout>-->
</LinearLayout>