<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dip">

        <TextView
            android:id="@+id/header_nameapp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dancing_script_bold"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="56sp" />

        <ImageView
            android:id="@+id/LogoImg"
            android:layout_width="wrap_content"
            android:layout_height="118dp"
            android:visibility="gone"
            app:srcCompat="@drawable/log" />

        <ImageView
            android:id="@+id/heartImg"
            android:layout_width="109dp"
            android:layout_height="107dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            app:srcCompat="@drawable/heart" />

        <TextView
            android:id="@+id/main_error_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="#E61919"
            android:textSize="18sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/main_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="#047800"
            android:textSize="18sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/loginLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/loginInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#DF3939"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:hint="login"
            android:inputType="textPersonName"
            android:padding="5dp"
            android:text="so"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/passwordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:ems="10"
            android:inputType="textPassword"
            android:padding="5dp"
            android:textSize="30sp" />

        <Button
            android:id="@+id/bSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="30dp"
            android:width="150dp"
            android:height="80dp"
            android:onClick="signIn"
            android:text="@string/singin"
            android:textSize="20sp" />

        <Button
            android:id="@+id/bRegistration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:width="250dp"
            android:height="60dp"
            android:backgroundTint="#B88AA5"
            android:onClick="signIn"
            android:text="@string/registration" />

        <Button
            android:id="@+id/bResetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:width="250dp"
            android:height="60dp"
            android:backgroundTint="#B88AA5"
            android:onClick="signIn"
            android:text="@string/forgotpassword" />


    </LinearLayout>
</ScrollView>